Allow markdown in organization.show for #254

--- a/app/assets/stylesheets/modules/sections/_section-organisation.scss
+++ b/app/assets/stylesheets/modules/sections/_section-organisation.scss
@@ -12,6 +12,11 @@
     background: $brand_green;
   }
 
+  .section-content--what {
+    li {
+      margin-left: 20px;
+    }
+  }
 
   .offer-contribute {
     border-color: $brand_green;
