--- a/app/views/offers/index/_advanced_search.html.slim
+++ b/app/views/offers/index/_advanced_search.html.slim
@@ -1,5 +1,5 @@
 .filter-form
-  h2.filter-form__headline Suchergebnisse filtern/einschränken
+  h2.filter-form__headline = I18n.t('offers.index.advanced_search.form_headline')
   = simple_form_for search_cache, url: offers_path, namespace: 'advanced',
                     html: { method: :get, novalidate: false } do |f|
     = f.input :query, as: :hidden
@@ -9,7 +9,7 @@
     .col-form-wrapper
       .col-form-inner
         fieldset.filter-form__fieldset
-          legend.filter-form__fieldset__headline Kontaktaufnahme
+          legend.filter-form__fieldset__headline = I18n.t('offers.index.advanced_search.fieldset_headline_contact')
           = f.input :contact_type,
                              item_wrapper_class: 'filter-form__radio',
                              as: :radio_buttons,
@@ -18,7 +18,7 @@
                              collection: i18n_collection(SearchForm::CONTACT_TYPES)
       .col-form-inner
         fieldset.filter-form__fieldset
-          legend.filter-form__fieldset__headline Alter
+          legend.filter-form__fieldset__headline = I18n.t('offers.index.advanced_search.fieldset_headline_age')
           = f.input :age_filter,
                             item_wrapper_class: 'filter-form__radio',
                             as: :radio_buttons,
@@ -27,7 +27,7 @@
                             collection: i18n_collection(AgeFilter::IDENTIFIER, true)
       .col-form-inner
         fieldset.filter-form__fieldset
-          legend.filter-form__fieldset__headline Zielgruppe
+          legend.filter-form__fieldset__headline = I18n.t('offers.index.advanced_search.fieldset_headline_target-group')
           = f.input :audience_filter,
                             item_wrapper_class: 'filter-form__radio',
                             as: :radio_buttons,
@@ -37,7 +37,7 @@
                               i18n_collection(AudienceFilter::IDENTIFIER, true)
       .col-form-inner
         fieldset.filter-form__fieldset.filter-form__fieldset--last
-          legend.filter-form__fieldset__headline Sprache
+          legend.filter-form__fieldset__headline = I18n.t('offers.index.advanced_search.fieldset_headline_language')
           = f.input :language_filter,
                               class: 'filter-form__select',
                               label: false,
@@ -50,4 +50,4 @@
           /       i18n_collection(LanguageFilter::IDENTIFIER, false, true),
           /              class: "filter-form__select"
 
-    = f.submit 'Erneut suchen', class: 'filter-form__submit'
+    = f.submit I18n.t('offers.index.advanced_search.submit'), class: 'filter-form__submit'
