ammend #222 - didn't actually need each_with_index

--- a/app/views/offers/show/_opening_section.html.slim
+++ b/app/views/offers/show/_opening_section.html.slim
@@ -9,7 +9,7 @@ section.section-content
             th.day
               = t("activerecord.models.opening.#{day}") + ':'
             td dir='ltr'
-              - times.each_with_index do |time, index|
+              - times.each do |time|
                 time= time
                 br
 
