--- a/app/views/offers/index/_advanced_search.html.slim
+++ b/app/views/offers/index/_advanced_search.html.slim
@@ -9,7 +9,8 @@
     .col-form-wrapper
       .col-form-inner
         fieldset.filter-form__fieldset
-          legend.filter-form__fieldset__headline = I18n.t('offers.index.advanced_search.fieldset_headline_contact')
+          legend.filter-form__fieldset__headline
+            = I18n.t('offers.index.advanced_search.fieldset_headline_contact')
           = f.input :contact_type,
                              item_wrapper_class: 'filter-form__radio',
                              as: :radio_buttons,
@@ -18,7 +19,8 @@
                              collection: i18n_collection(SearchForm::CONTACT_TYPES)
       .col-form-inner
         fieldset.filter-form__fieldset
-          legend.filter-form__fieldset__headline = I18n.t('offers.index.advanced_search.fieldset_headline_age')
+          legend.filter-form__fieldset__headline
+            = I18n.t('offers.index.advanced_search.fieldset_headline_age')
           = f.input :age_filter,
                             item_wrapper_class: 'filter-form__radio',
                             as: :radio_buttons,
@@ -27,7 +29,9 @@
                             collection: i18n_collection(AgeFilter::IDENTIFIER, true)
       .col-form-inner
         fieldset.filter-form__fieldset
-          legend.filter-form__fieldset__headline = I18n.t('offers.index.advanced_search.fieldset_headline_target-group')
+          legend.filter-form__fieldset__headline
+            = I18n.t 'offers.index.advanced_search'\
+                     '.fieldset_headline_target-group'
           = f.input :audience_filter,
                             item_wrapper_class: 'filter-form__radio',
                             as: :radio_buttons,
@@ -37,17 +41,11 @@
                               i18n_collection(AudienceFilter::IDENTIFIER, true)
       .col-form-inner
         fieldset.filter-form__fieldset.filter-form__fieldset--last
-          legend.filter-form__fieldset__headline = I18n.t('offers.index.advanced_search.fieldset_headline_language')
+          legend.filter-form__fieldset__headline
+            = I18n.t('offers.index.advanced_search.fieldset_headline_language')
           = f.input :language_filter,
                               class: 'filter-form__select',
                               label: false,
                               collection: i18n_collection(LanguageFilter::IDENTIFIER)
-
-
-    / to enter loop (remove if not needed):
-          / = f.input :language_filter, label: false do
-          /   = f.select :language_filter,
-          /       i18n_collection(LanguageFilter::IDENTIFIER, false, true),
-          /              class: "filter-form__select"
 
     = f.submit I18n.t('offers.index.advanced_search.submit'), class: 'filter-form__submit'
