--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,7 @@
 @import "modules/banner";
 @import "modules/ajax";
 @import "modules/js-geolocation";
+@import "modules/table";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
