Add basic cookie warning styling

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -212,6 +212,10 @@
 
   // Misc ######################################
 
+  .JS-Cookie-warning {
+    font-size: 11px;
+  }
+
   a[href^="tel"]:link,
   a[href^="tel"]:visited,
   a[href^="tel"]:hover,
