--- a/app/assets/stylesheets/modules/_js-cookie-warning.scss
+++ b/app/assets/stylesheets/modules/_js-cookie-warning.scss
@@ -1,17 +1,25 @@
 .JS-Cookie-warning {
   position: fixed;
   bottom: 0;
+  padding: 10px 30px 10px 10px;
   width: 100%;
-  background: blue;
+  background: $brand_orange;
   color: white;
+  font-size: 13px;
+
+  a {
+    @extend %roboto_bold;
+    color: inherit;
+  }
 
   .JS-Cookie-warning--close {
-    display: block;
-    width: 10px;
-    height: 10px;
     position: absolute;
-    right: 0;
-    top: 0;
+    top: 5px;
+    right: 5px;
+    display: block;
+    width: 20px;
+    height: 20px;
+    font-size: 22px;
     cursor: pointer;
   }
 }
