--- a/app/views/offers/show/_who_contact_people.html.slim
+++ b/app/views/offers/show/_who_contact_people.html.slim
@@ -1,7 +1,7 @@
 - if offer.contact_people.any?
   ul.section-content--contact-person-list
     / TODO: Order by no name first
-    - offer.contact_people.each do |contact|
+    - offer.contact_people.each_with_index do |contact, index|
       li
         - if contact.name?
           = "#{I18n.t 'offers.show.who.person'}: #{contact.name}"
@@ -26,5 +26,6 @@
           br
         - if contact.email?
           = t 'offers.show.who.email'
-          span#secure-email==< secure_email_to contact.email
+          span[id="secure-email-#{index}"]
+            ==< secure_email_to contact.email, index
           br
