Fix minors bugs, typos and refactor

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -34,7 +34,7 @@
 
       section.section-content.section-content--whos-offering
         h3.section-content__title
-          = t 'offers.show.who.title'
+          = t 'offers.show.address.title'
 
         .section-content__body
 
