--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -1,13 +1,14 @@
-header.header-main.header-main--wide
-  .header-main__foreground.wrapper-inner
-    h1.Logo.Logo--start = link_to "clarat.org", '/'
+- cache 'start_header' do
+  header.header-main.header-main--wide
+    .header-main__foreground.wrapper-inner
+      h1.Logo.Logo--start = link_to "clarat.org", '/'
 
-    .Claim
-      h2.Claim__firstrow = t 'shared.navigation.claim.first_row'
-      h3.Claim__secondrow = t 'shared.navigation.claim.second_row'
+      .Claim
+        h2.Claim__firstrow = t 'shared.navigation.claim.first_row'
+        h3.Claim__secondrow = t 'shared.navigation.claim.second_row'
 
-  .header-main__stage
-    / Optional stage for animations
+    .header-main__stage
+      / Optional stage for animations
 
 - if controller_name == 'pages' && action_name == 'home'
 
@@ -15,17 +16,18 @@ header.header-main.header-main--wide
     .wrapper-inner
       = render '/offers/shared/search_form', search_cache: search_cache
 
-      nav.nav-sections
-        h3.nav-sections__headline = t 'shared.distributor.sections_headline'
+      - cache 'category_navigation' do
+        nav.nav-sections
+          h3.nav-sections__headline = t 'shared.distributor.sections_headline'
 
-        ul.nav-sections__list
-          - Category.mains.each do |main|
-            li.nav-sections__listitem class="nav-sections__listitem--#{main.icon}"
-              = link_to main.name, offers_path( \
-                  'search_form[categories]' => main.name,
-                  'search_form[query]' => '',
-                  'search_form[search_location]' => \
-                    search_cache.search_location,
-                  'search_form[generated_geolocation]' => \
-                    search_cache.generated_geolocation),
-                  data: { no_turbolink: true }
+          ul.nav-sections__list
+            - Category.mains.each do |main|
+              li.nav-sections__listitem class="nav-sections__listitem--#{main.icon}"
+                = link_to main.name, offers_path( \
+                    'search_form[categories]' => main.name,
+                    'search_form[query]' => '',
+                    'search_form[search_location]' => \
+                      search_cache.search_location,
+                    'search_form[generated_geolocation]' => \
+                      search_cache.generated_geolocation),
+                    data: { no_turbolink: true }
