--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -4,38 +4,44 @@ footer.footer-main
       .footer-main__subscribe
         = render 'subscriptions/shared/new', subscription: subscription
 
-        .Social-media
-          = link_to 'Google+',
-                    'https://plus.google.com/110429028641743127592/about',
-                    target: '_blank',
-                    class: 'Social-media__item Social-media__item--googleplus'
-          = link_to 'Twitter',
-                    'https://twitter.com/claratpunktorg',
-                    target: '_blank',
-                    class: 'Social-media__item Social-media__item--twitter'
-          = link_to 'Facebook',
-                    'https://www.facebook.com/claratpunktorg',
-                    target: '_blank',
-                    class: 'Social-media__item Social-media__item--facebook'
+        - cache 'footer_links_1' do
+
+          .Social-media
+            = link_to 'Google+',
+                      'https://plus.google.com/110429028641743127592/about',
+                      target: '_blank',
+                      class: 'Social-media__item Social-media__item--googleplus'
+            = link_to 'Twitter',
+                      'https://twitter.com/claratpunktorg',
+                      target: '_blank',
+                      class: 'Social-media__item Social-media__item--twitter'
+            = link_to 'Facebook',
+                      'https://www.facebook.com/claratpunktorg',
+                      target: '_blank',
+                      class: 'Social-media__item Social-media__item--facebook'
 
       .footer-main__about
-        .mascot.mascot--footer
-        nav.nav-site
-          ul.nav-site__list
-            li.nav-site__listitem
-              = link_to 'Über uns', '/ueber-uns'
-            li.nav-site__listitem
-              = link_to 'Häufige Fragen', '/haeufige-fragen'
-            li.nav-site__listitem
-              = link_to 'Kontakt', new_contact_path
+        - cache 'footer_links_2' do
 
-  section.footer-main__secondrow
-    .wrapper-inner
-      nav.nav-legal
-        ul.nav-legal__list
-          li.nav-legal__listitem
-            = link_to 'Impressum', '/impressum'
-          li.nav-legal__listitem
-            = link_to 'Rechtliche Hinweise', '/rechtliche-hinweise'
-          li.nav-legal__listitem
-            = link_to 'Datenschutzhinweise', '/datenschutzhinweise'
+          .mascot.mascot--footer
+          nav.nav-site
+            ul.nav-site__list
+              li.nav-site__listitem
+                = link_to 'Über uns', '/ueber-uns'
+              li.nav-site__listitem
+                = link_to 'Häufige Fragen', '/haeufige-fragen'
+              li.nav-site__listitem
+                = link_to 'Kontakt', new_contact_path
+
+  - cache 'footer_links_3' do
+
+    section.footer-main__secondrow
+      .wrapper-inner
+        nav.nav-legal
+          ul.nav-legal__list
+            li.nav-legal__listitem
+              = link_to 'Impressum', '/impressum'
+            li.nav-legal__listitem
+              = link_to 'Rechtliche Hinweise', '/rechtliche-hinweise'
+            li.nav-legal__listitem
+              = link_to 'Datenschutzhinweise', '/datenschutzhinweise'
