--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -24,27 +24,30 @@
     .section-wrapper-minor
 
       - if location
-        section.section-content.section-content--where
-          h3.section-content__title = t 'organizations.show.where'
-          .section-content__body
-            /! http://microformats.org/wiki/adr start
-            .adr
-              p
-                - if location.name?
-                  span.org= location.name
+        - cache [location, 'organization_show_text'] do
+
+          section.section-content.section-content--where
+            h3.section-content__title = t 'organizations.show.where'
+            .section-content__body
+              /! http://microformats.org/wiki/adr start
+              .adr
+                p
+                  - if location.name?
+                    span.org= location.name
+                    br
+                  - if location.addition?
+                    span.extended-address= location.addition
+                    br
+                  span.street-address= location.street
                   br
-                - if location.addition?
-                  span.extended-address= location.addition
-                  br
-                span.street-address= location.street
-                br
-                span.postal-code=> location.zip
-                span.locality= location.city
-            /! http://microformats.org/wiki/adr end
+                  span.postal-code=> location.zip
+                  span.locality= location.city
+              /! http://microformats.org/wiki/adr end
 
         section.section-content--map
           .aside-standard__container
-            h5.aside-standard__headline = t 'organizations.show.map_output_searchresult'
+            h5.aside-standard__headline
+              = t 'organizations.show.map_output_searchresult'
             #map-container
               #map-canvas data={markers: @markers.to_json}
 
