small hotfix for location name display in offers#show

--- a/app/views/offers/show/_who_location.html.slim
+++ b/app/views/offers/show/_who_location.html.slim
@@ -1,7 +1,7 @@
 /! http://microformats.org/wiki/adr start
 .adr
   p
-    - if offer.location_name
+    - unless offer.location_name.blank?
       span.org= offer.location_name
       br
     - unless offer.location_addition.blank?
