--- a/app/views/layouts/partials/_head.html.slim
+++ b/app/views/layouts/partials/_head.html.slim
@@ -1,11 +1,3 @@
-= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
-link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
-
-= javascript_include_tag "vendor/modernizr.custom.js"
-
-= javascript_include_tag "application", "data-turbolinks-track" => true
-= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&language=de&sensor=false&v=3.exp"
-
 meta http-equiv="X-UA-Compatible" content="IE=edge"
 
 meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1"
@@ -33,23 +25,7 @@ meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png"
 
 meta name="theme-color" content="#F4B528"
 
-|     <!--[if lt IE 9]>
-|       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-|       <script type="text/javascript" src="
-= asset_url('vendor/selectivizr-min.js')
-|        "></script>
-|     <![endif]-->
-|     <!--[if !IE]><!-->
-|     <script>
-|         if (Function('/*@cc_on return document.documentMode===10@*/')()) {
-|             document.documentElement.className += ' ie10';
-|         }
-|         if (typeof document.documentMode !== 'undefined' && document.documentMode === 11) {
-|             document.documentElement.className += ' ie11';
-|         }
-|    </script>
-|  <!--<![endif]-->
-
+/ Google Analytics
 javascript:
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
