--- a/app/views/layouts/partials/_javascript_config.html.slim
+++ b/app/views/layouts/partials/_javascript_config.html.slim
@@ -1,7 +1,10 @@
+/ General JS Setup
 javascript:
+  // Namespace
+  Clarat = {}
+
+  // Algolia
   Clarat.algolia_app_id = "#{Rails.application.secrets.algolia['app_id']}";
   Clarat.algolia_pub_key = "#{Rails.application.secrets.algolia['pub_key']}";
   Clarat.algolia_personal_index = "#{Offer.personal_index_name}";
   Clarat.algolia_remote_index = "#{Offer.remote_index_name}";
-
-  I18n.locale = "#{I18n.locale}";
