--- a/app/views/layouts/partials/_head.html.slim
+++ b/app/views/layouts/partials/_head.html.slim
@@ -3,6 +3,7 @@ meta http-equiv="X-UA-Compatible" content="IE=edge"
 meta( name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=1")
 
+/ TODO: Fill these
 meta property="og:title" content=""
 meta property="og:site_name" content=""
 meta property="og:image" content=""
@@ -42,8 +43,14 @@ link( rel="icon"
       type="image/png"
       href="/favicons/favicon-96x96.png"
       sizes="96x96")
-link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32"
-link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16"
+link( rel="icon"
+      type="image/png"
+      href="/favicons/favicon-32x32.png"
+      sizes="32x32")
+link( rel="icon"
+      type="image/png"
+      href="/favicons/favicon-16x16.png"
+      sizes="16x16")
 link rel="manifest" href="/favicons/android-chrome-manifest.json"
 meta name="msapplication-TileColor" content="#f4b528"
 meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png"
