Hotfix: Change color of filter fieldset headlines

--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -68,7 +68,7 @@
 .filter-form__fieldset__headline {
   @extend %roboto_bold;
   margin: 0 0 5px;
-  color: $brand_blue;
+  color: $brand_brown;
   font-weight: normal;
   font-size: 13px;
 }
