--- a/app/assets/stylesheets/modules/_categories.scss
+++ b/app/assets/stylesheets/modules/_categories.scss
@@ -6,8 +6,7 @@
 
 .Categories {
   @extend %layout-col-29;
-  margin-right: 2.5%;
-  margin-bottom: 40px;
+  margin: 10px 2.5% 40px 0;
 }
 
 .Categories__headline {
