Improve organization.show (integrate map in address box)

--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -50,7 +50,7 @@
 
       = link_to new_contact_path,
                 class: 'offer-contribute js-report-overlay_open' do
-        i.fa.fa-pencil-square-o
+        i.fa.fa-exclamation-triangle
         = t 'shared.show.cta_report_errors'
 
       = modal_for 'js-report-overlay' do
