--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -63,7 +63,7 @@
       / Found any mistakes?
       = link_to new_contact_path,
                 class: 'offer-contribute js-report-overlay_open' do
-        i.fa.fa-pencil-square-o
+        i.fa.fa-exclamation-triangle
         = t 'shared.show.cta_report_errors'
       = modal_for 'js-report-overlay' do
         = render '/contacts/shared/new', contact: @contact, reporting: true
