--- a/app/views/layouts/partials/_head.html.slim
+++ b/app/views/layouts/partials/_head.html.slim
@@ -58,12 +58,14 @@ meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png"
 meta name="theme-color" content="#F4B528"
 
 / Google Analytics
-javascript:
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,
-  m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+- if Rails.env.production?
+  javascript:
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o
+    ),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore
+    (a,m)})(window,document,'script','//www.google-analytics.com/analytics.js',
+    'ga');
 
-  ga('create', 'UA-59626864-1', 'auto');
-  ga('set', 'anonymizeIp', true);
-  ga('send', 'pageview');
+    ga('create', 'UA-59626864-1', 'auto');
+    ga('set', 'anonymizeIp', true);
+    ga('send', 'pageview');
