for #245 - basic refactoring: offers#index now ajax based

--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -5,6 +5,16 @@
 // ---------------------------------------------------------------
 
 
+.Listing-results__pending-ajax {
+  text-align: center;
+  font-size: 40px;
+
+  h2 {
+    font-size: 30px;
+    margin: 100px 0 0 0;
+  }
+}
+
 .Listing-results__list {
   margin: 0;
   padding: 0;
