--- a/app/views/offers/index/_categories_nest.html.slim
+++ b/app/views/offers/index/_categories_nest.html.slim
@@ -3,8 +3,10 @@
     - set.each do |category, children|
       - name = category.name
       - display_name = facets ? "#{name} (#{facets[name] || 0})" : name
-      li.Categories__listitem class=category_list_classes(search_cache, name,
-                                                          depth, children)
+      li.Categories__listitem(
+        class=category_list_classes(search_cache, name, depth, children)
+        data-id=category.id
+      )
         = link_to offers_path(search_form: search_cache.category_focus(name)),
                   class: 'btn' do
           = display_name
