for #245 - fix history on ajax search

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,7 +57,7 @@
 
 @import "mediaqueries/config";
 
-@import "qtip2-jquery-rails";
+@import "qtip2/jquery.qtip.scss";
 @import "vendor/qtip2_overide";
 @import "vendor/twitter-typeahead_override";
 @import "vendor/places-autocomplete_override";
