--- a/app/views/offers/index/_pending_ajax.html.slim
+++ b/app/views/offers/index/_pending_ajax.html.slim
@@ -8,4 +8,6 @@
 - content_for :view_specific_scripts do
 
   javascript:
-    Clarat.ajaxReplace($('.content-main'), window.location.href);
+    Clarat.ajaxReplace(
+      $('.content-main'), window.location.href, { historyPush: false }
+    );
