--- a/app/views/pages/privacy.html.slim
+++ b/app/views/pages/privacy.html.slim
@@ -128,4 +128,4 @@
               p
                 == t 'pages.address.email',
                      mailto: \
-                      link_to('mailto:mail@clarat.org', 'mail@clarat.org')
+                      link_to('mail@clarat.org', 'mailto:mail@clarat.org')
