reenable unavailable location overlay and location fallback flash

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,13 +29,13 @@
 @import "modules/listing-offers";
 @import "modules/listing-organizations";
 @import "modules/map";
-@import "modules/popup-content";
 @import "modules/privacy";
 @import "modules/flash-message";
 @import "modules/banner";
 @import "modules/ajax";
 @import "modules/js-geolocation";
 @import "modules/js-cookie-warning";
+@import "modules/js-modal";
 @import "modules/table";
 
 @import "modules/sections/section-content";
