--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -3,13 +3,20 @@
 
     = render 'offers/index/pending_ajax'
 
-  / - if @update_request
-  /   = modal_for 'unavailable_location_overlay' do
-  /     p= I18n.t 'offers.index.unavailable_location_modal'
-  /     = render '/update_requests/new', update_request: @update_request
+
+  = modal_for 'unavailable_location_overlay', autoopen: false do
+    p= I18n.t 'offers.index.unavailable_location_modal'
+    = render '/update_requests/new', update_request: @update_request
 
   = render 'offers/index/categories_sidebar', category_tree: @category_tree,
                                               search_cache: @search_cache,
                                               facets: false
-/ - content_for :view_specific_scripts do # careful new script in pending_ajax
-/   = javascript_include_tag "gmaps_search_results.js"
+
+/ Alert user when we used default location because they didn't give one
+- if @search_cache.search_location.blank?
+  - content_for :view_specific_scripts do
+
+    javascript:
+      Clarat.Flash.createFlash(
+        'alert', "#{j I18n.t('offers.index.location_fallback')}"
+      );
