tooltip and ajac replace JS refactorings

--- a/app/views/offers/index/_pending_ajax.html.slim
+++ b/app/views/offers/index/_pending_ajax.html.slim
@@ -8,6 +8,6 @@
 - content_for :view_specific_scripts do
 
   javascript:
-    Clarat.ajaxReplace(
+    Clarat.Ajax.replace(
       $('.content-main'), window.location.href, { historyPush: false }
     );
