--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -49,6 +49,6 @@ footer.footer-main
               #google_translate_element
               javascript:
                 | function googleTranslateElementInit() {
-                  | new google.translate.TranslateElement({pageLanguage: 'de', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true, gaId: 'UA-59626864-1'}, 'google_translate_element');
+                  | new google.translate.TranslateElement({pageLanguage: 'de', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false, gaTrack: true, gaId: 'UA-59626864-1'}, 'google_translate_element');
                 | }
               script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"
