--- a/app/views/offers/index_xhr.html.slim
+++ b/app/views/offers/index_xhr.html.slim
@@ -3,11 +3,11 @@
                                         search_cache: @search_cache,
                                         search: @search
 
-// trigger facet count replacement
+/ trigger facet count replacement
 javascript:
   Clarat.CategoryTree.updateFacets(#{@facets.to_json.html_safe});
 
-
+/ trigger the hidden location modal to open if there are no nearby results
 - if @nearby.empty?
   javascript:
     Clarat.Modal.open('#unavailable_location_overlay');
