Update offer list in organization show

--- a/app/assets/stylesheets/modules/_listing-offers.scss
+++ b/app/assets/stylesheets/modules/_listing-offers.scss
@@ -11,6 +11,7 @@
   padding: 0;
 }
 
-.Listing-offers__listitem {
-  min-height: 32px;
+.Listing-offers__address {
+  font-size: 13px;
+  padding-bottom: 10px;
 }
